# R-Type

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Client.cpp  Client.hpp  LICENSE  R-Type_Protcole.md  README.md  Untitled Diagram.drawio  vcpkg-configuration.json  vcpkg.json  waves.json
.github/: dependabot.yml
.github/workflows/: build.yml  doxygen.yml  mirror.yml
assets/shaders/: background.frag  background_original.frag  black.frag
doc/: cppreference-doxygen-web.tag.xml  doxyfile
docs/ECS/: Diagrams.md
docs/Network/: HowToCreateAClient.md  Network.md  R-Type Protcol.md  RFC_Reliable_UDP_Protocol.txt  network.md
docs/dev/: annotated.html  classes.html  dir_000001_000007.html  dir_000001_000025.html  dir_000002_000006.html  dir_000003_000015.html  dir_000003_000021.html  dir_000004_000013.html  dir_000004_000015.html  dir_000014_000021.html  dir_000015_000022.html  dir_000017_000014.html  dir_000017_000015.html  dir_000017_000019.html  dir_000017_000022.html  dir_000017_000034.html  dir_000019_000014.html  dir_000019_000015.html  dir_000019_000017.html  dir_000019_000020.html  dir_000019_000021.html  dir_000019_000034.html  dir_000020_000013.html  dir_000020_000017.html  dir_000020_000021.html  dir_000020_000034.html  dir_000021_000019.html  dir_000022_000029.html  dir_000026_000004.html  dir_000026_000034.html  dir_000028_000007.html  dir_000028_000013.html  dir_000030_000013.html  dir_000031_000013.html  dir_000032_000007.html  dir_000032_000034.html  dir_000034_000013.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_075bb3ff235063c77951cd176d15a741_dep.map  dir_075bb3ff235063c77951cd176d15a741_dep.md5  (+188 more)
docs/doxygen/: Doxyfile  cppreference-doxygen-web.tag.xml
docs/main/: annotated.html  classes.html  dir_000004_000001.html  dir_000004_000010.html  dir_000005_000001.html  dir_000005_000004.html  dir_000007_000001.html  dir_000007_000004.html  dir_000007_000005.html  dir_000007_000010.html  (+64 more)
lib/: CMakeLists.txt
lib/game/: CMakeLists.txt  game.cppm  module.cppm  scenes copy.cppm  scenes.cppm
lib/game/components/: CMakeLists.txt  buttons.cppm  enemies.cppm  input.cppm  inputs.cppm  map_editor.cppm  network.cppm  powerup.cppm  projectiles.cppm  settings.cppm  spawn_waves.cppm  stats.cppm
lib/game/scenes/: CMakeLists.txt  game.cppm
lib/game/scenes/menus/: CMakeLists.txt  game_over.cppm  lobby.cppm  main.cppm  map_editor.cppm  multiplayer.cppm
lib/game/systems/: CMakeLists.txt  button_system.cppm  buttons.cppm  controllable_network.cppm  enemies.cppm  game_over.cppm  input_system.cppm  inputs.cppm  kill_system.cppm  map_editor.cppm  powerup.cppm  projectiles.cppm  shader_background.cppm  spawn_waves.cppm  stats.cppm
lib/networkClient/: CMakeLists.txt  Client.cpp  Client.cppm  Client.hpp  CommandHandler.cpp  CommandHandler.cppm  CommandHandler.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Client.cpp  Client.hpp  Create_ennemies.cpp  Create_ennemies.hpp  Create_powerup.cpp  Create_powerup.hpp  Game.cpp  Game.hpp  Handle_collision.cpp  Handle_collision.hpp  Handle_enemies_wave.cpp  Handle_enemies_wave.hpp  HandlingBullet.cpp  HandlingBullet.hpp  Main.cpp  Sound_game.cpp  Sound_game.hpp  bullet_event.cpp  bullet_event.hpp  create_enemies.cpp  create_enemies.hpp  create_ennemies.cpp  custom_registery.hpp  game.cpp  game.hpp  gameStateManager.hpp  game_state.hpp  main.cpp  menu.cpp  menu.hpp  package.cpp  package.hpp  sound_effect.cpp  sound_effect.hpp
src/client/card-powerup/: powerup_system.cpp  powerup_system.hpp
src/client/components/: Bullet.hpp  BulletHeal.hpp  Button.hpp  Chasing.hpp  EnemyLog.hpp  Ennemy_state.hpp  Entity_type.hpp  GameState.hpp  LifeState.hpp  LoopMovement.hpp  PowerUp_state.hpp  Score.hpp  ScoreText.hpp  Shield.hpp  Shooting.hpp  Spawner.hpp  TextBox.hpp
src/client/factories/: button_factory.cpp  button_factory.hpp  textbox_factory.cpp  textbox_factory.hpp
src/client/game/: Game.cpp  Game.hpp  GamePlayState.cpp  GamePlayState.hpp
src/client/lobby/: LobbyState.cpp  LobbyState.hpp
src/client/map_editor/: MapEditorState.cpp  MapEditorState.hpp
src/client/menu/: MainMenuState.cpp  MainMenuState.hpp
src/client/multiplayer/: MultiplayerMenuState.cpp  MultiplayerMenuState.hpp
src/client/networkClient/: Client.cpp  Client.hpp  CommandHandler.cpp  CommandHandler.hpp
src/client/settings/: SettingsState.cpp  SettingsState.hpp
src/client/systems/: CMakeLists.txt
src/client/systems/bullet/: bullet_system.cpp  bullet_system.hpp
src/client/systems/button/: button_system.cpp  button_system.hpp
src/client/systems/chasing_enemy/: chasing_enemy_system.cpp  chasing_enemy_system.hpp
src/client/systems/collision/: CMakeLists.txt  collision_system.cpp
src/client/systems/ennemy_state/: ennemy_state_system.cpp  ennemy_state_system.hpp
src/client/systems/gamestate_manager/: CMakeLists.txt  game_state_manager.cpp  game_state_manager.hpp
src/client/systems/loop_movement/: loop_movement_system.cpp  loop_movement_system.hpp
src/client/systems/power-up/: powerup_system.cpp  powerup_system.hpp
src/client/systems/shader/: shader_system.cpp  shader_system.hpp
src/client/systems/shield/: shield_system.cpp  shield_system.hpp
src/client/systems/shooting_enemy/: shooting_enemy_system.cpp  shooting_enemy_system.hpp
src/client/systems/spawner_enemy/: spawner_enemy_system.cpp  spawner_enemy_system.hpp
src/client/utils/: CMakeLists.txt  CheckEntity.cpp  CheckEntity.hpp  FPSCounter.hpp  Getimagesize.cpp  Getimagesize.hpp  Remove_all_components.hpp  Settings.hpp
src/sample/: CMakeLists.txt  main.cpp
src/sample/networkClient/: CMakeLists.txt  Client.cpp  CommandHandler.hpp
src/server/: CMakeLists.txt  Lobby.cpp  Lobby.hpp  README.md  UdpServer.cpp  UdpServer.hpp  client.cpp  client.hpp  main.cpp
src/server/client/: CMakeLists.txt  ClientSaver.cpp  ClientSaver.hpp  client.cpp  client.hpp
src/server/lobby/: Lobby.cpp  Lobby.hpp
src/server/matchmaking/: CMakeLists.txt  MatchmakingQueue.cpp  MatchmakingQueue.hpp  MatchmakingSystem.cpp  MatchmakingSystem.hpp
(+3582 files in other folders)
